// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.internal.testdata.service.telemetryinfo;

option go_package = "namespacelabs.dev/foundation/internal/testdata/service/telemetryinfo";

service TelemetryInfoService {
    rpc GetServiceName(GetServiceNameRequest) returns (GetServiceNameResponse);
}

message GetServiceNameRequest {}

message GetServiceNameResponse {
    string server_name     = 1;
    string telemetry_service_name = 2;
}
